--- a/styles.css
+++ b/styles.css
@@ -21,12 +21,13 @@ caption {
 }
 
 table {
-  border-collapse: separate;
+  border-collapse: collapse;
   /* Стилизация самиз рамок таблицы может быть еще collapse */
+  border: 2px solid rgb(153, 51, 92);
 }
 
-table th,
-table td {
+th,
+td {
   padding: 10px;
   border: 2px solid rgb(153, 51, 92);
 }
