--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ caption {
   color: white;
   background-color: blue;
 
+  width: 600px;
   font-size: 30px;
   margin-bottom: 30px;
   text-align: left;
