--- a/styles.css
+++ b/styles.css
@@ -3,32 +3,72 @@ body {
   text-align: center;
 }
 
+header {
+  padding: 20px 10px;
+}
+
 .navigation {
   text-align: left;
 }
 
 .list-header {
   display: flex;
-  margin-bottom: 40px;
 }
 
-.list-link:not(:first-child) {
+.list-item:not(:first-child) {
   margin-left: 30px;
 }
 
-.list-link a {
+.list-item {
+}
+
+.list-link {
+  position: relative;
+  display: inline-flex;
   color: brown;
   border: 2px solid teal;
-  border-radius: 5px;
-  padding: 10px 15px;
+  overflow: hidden;
+  padding: 10px 20px;
+  margin: 0;
 
+  border-radius: 5px;
+
+  align-items: baseline;
   text-decoration: none;
 }
 
-.list-link a:hover,
-.list-link a:focus {
+.list-link:hover,
+.list-item .list-link:focus {
   color: white;
   background-color: blue;
+}
+
+.list-item:hover .icon-before {
+  transform: translateY(-30px);
+}
+
+.list-link .icon-before,
+.list-link .icon-before1 {
+  margin-right: 5px;
+  transition: transform 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.list-link .icon-before1 {
+  position: absolute;
+  display: inline-block;
+  left: 18px;
+
+  transform: translateY(30px);
+}
+
+.list-item:hover .icon-before1 {
+  transform: translateY(0);
+  fill: white;
+}
+
+.icon-before,
+.icon-before1 {
+  fill: tomato;
 }
 
 caption {
