--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,133 @@
-/*# sourceMappingURL=main.css.map */
+body {
+  font-family: -apple-system, sans-serif;
+}
+
+h1,
+h2,
+h3,
+ul,
+p {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+picture {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+header {
+  padding: 30px 0 40px 0;
+}
+
+.container {
+  margin: 0 auto;
+  padding: 0 20px;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+    padding: 0 32px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .container {
+    width: 1280px;
+    padding: 0 16px;
+  }
+}
+
+.navigation__list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.navigation__item:not(:first-child) {
+  margin-left: 30px;
+}
+.navigation__link {
+  overflow: hidden;
+  display: inline-block;
+  padding: 10px 20px;
+  border-radius: 30px;
+  font-size: 25px;
+  font-weight: 700;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: #272c34;
+  background-color: #206a97;
+  transition: transform 250ms linear;
+}
+.navigation__link:hover, .navigation__link:focus {
+  background-color: #fa8072;
+}
+.navigation__link--positionsvg {
+  position: relative;
+}
+.navigation__link--scale:hover, .navigation__link--scale:focus {
+  transform: scale(1.5);
+}
+.navigation__link--rotate:hover, .navigation__link--rotate:focus {
+  transform: rotateX(45deg);
+}
+.navigation__link--line {
+  position: relative;
+}
+.navigation__link--line::before {
+  position: absolute;
+  content: "";
+  bottom: 15px;
+  left: 0;
+  height: 3px;
+  width: 100%;
+  background-color: #6a5acd;
+  transform: translateX(100%);
+}
+.navigation__link--line:hover::before, .navigation__link--line:focus::before {
+  transform: translateX(0);
+}
+.navigation__svgmovingup {
+  fill: #272c34;
+  margin-right: 5px;
+  transform: translateY(-40px);
+  transition: transform 250ms linear;
+}
+.navigation__svgmovingdown {
+  fill: #272c34;
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  transform: translateY(-50%);
+  transition: transform 250ms linear;
+}
+
+.navigation__link--positionsvg:hover .navigation__svgmovingup,
+.navigation__link--positionsvg:focus .navigation__svgmovingup {
+  transform: translateY(0);
+}
+
+.navigation__link--positionsvg:hover .navigation__svgmovingdown,
+.navigation__link--positionsvg:focus .navigation__svgmovingdown {
+  transform: translateY(40px);
+}/*# sourceMappingURL=main.css.map */
