--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -49,7 +49,9 @@
         width: 100%;
         background-color: $bgc-link-before;
 
-        transform: translateX(100%);
+        transform: translateX(-100%);
+
+        transition: transform 250ms linear;
       }
       &:hover::before,
       &:focus::before {
