--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,8 @@ header {
   height: 3px;
   width: 100%;
   background-color: #6a5acd;
-  transform: translateX(100%);
+  transform: translateX(-100%);
+  transition: transform 250ms linear;
 }
 .navigation__link--line:hover::before, .navigation__link--line:focus::before {
   transform: translateX(0);
