--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,15 +1,20 @@
+header {
+}
+
 .navigation {
   &__list {
     @include flex-centered;
   }
 
   &__item {
+    padding: 40px 0;
     &:not(:first-child) {
       margin-left: 30px;
     }
   }
 
   &__link {
+    position: relative;
     overflow: hidden;
     display: inline-block;
     padding: 10px 20px;
@@ -19,19 +24,22 @@
     color: $color-header-link;
     background-color: $bgc-header-link;
 
-    transition: transform 250ms linear;
+    transition: transform 250ms linear, background-color 250ms linear;
 
     &:hover,
     &:focus {
       background-color: $bgc-hover-header-link;
+      transition: transform 250ms linear, background-color 250ms linear;
     }
 
     &--positionsvg {
-      position: relative;
     }
-    &--scale:hover,
-    &--scale:focus {
-      transform: scale(1.5);
+    &--scale {
+      z-index: 99;
+      &:hover,
+      &:focus {
+        transform: scale(1.5);
+      }
     }
 
     &--rotate:hover,
@@ -39,7 +47,6 @@
       transform: rotateX(45deg);
     }
     &--line {
-      position: relative;
       &::before {
         position: absolute;
         content: "";
@@ -86,4 +93,8 @@
 .navigation__link--positionsvg:hover .navigation__svgmovingdown,
 .navigation__link--positionsvg:focus .navigation__svgmovingdown {
   transform: translateY(40px);
+}
+
+.current {
+  background-color: $color-on-state-staige;
 }
