--- a/scss/utils/_colors.scss
+++ b/scss/utils/_colors.scss
@@ -2,3 +2,7 @@ $color-header-link: #272c34;
 $bgc-header-link: #206a97;
 $bgc-hover-header-link: #fa8072;
 $bgc-link-before: #6a5acd;
+$color-on-state-staige: #ff1493;
+$color-title-table: #d2691e;
+$color-border: #00bfff;
+$color-hover-link: #ff00ff;
