--- a/scss/utils/_common.scss
+++ b/scss/utils/_common.scss
@@ -32,10 +32,6 @@ picture {
   height: auto;
 }
 
-header {
-  padding: 30px 0 40px 0;
-}
-
 .container {
   margin: 0 auto;
   padding: 0 20px;
@@ -51,4 +47,8 @@ header {
     width: 1280px;
     padding: 0 16px;
   }
+}
+
+.centered {
+  text-align: center;
 }
