--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ picture {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 .navigation__item {
   padding: 40px 0;
@@ -140,6 +141,10 @@ picture {
   background-color: #ff1493;
 }
 
+.project:not(:last-child) {
+  margin-bottom: 40px;
+}
+
 .hero {
   padding: 40px 0;
 }
@@ -188,8 +193,4 @@ picture {
 .tabel__item--secondary {
   border: 2px solid #00bfff;
   padding: 10px;
-}
-
-.project:not(:last-child) {
-  margin-bottom: 40px;
 }/*# sourceMappingURL=main.css.map */
